# marrow

./: CMakeLists.txt  README.md  allocator.h  main.c  marrow.h
examples/: CMakeLists.txt  build.bat  compile.bat  main.c  stvari.json
include/marrow/: allocator.h  json.h  mapa.h  marrow.h  webgpu_utils.h
